# lizard-standalone

./: .editorconfig  .gitignore  LICENSE  README.md  lizard-versions.txt  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: build_matrix.py
