[project]
name = "lizard-standalone"
version = "0.1.0"
description = "Standalone binary distribution of lizard"
requires-python = "==3.14.*"
dependencies = [
  "lizard==1.21.7",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.0",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
